--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,3 +1,4 @@
 ---
 collections:
-  - community.general
+  - name: community.general
+    source: https://192.168.122.228/pulp_ansible/galaxy/community/
